5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4476/executions/1674_1100.log
== TEST (2019-04-25 10:28:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garça")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leão-dourado")
elif (valor == 50):
	print("Animal: Onça-pintada")
else:
	print("Animal: Garoupa")



-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:28:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")



-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 10:29:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")



-- EXECUTION TIME:
0.140031
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: Garoupa
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:29:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")



-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:30:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

print("Entrada: valor")

if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")



-- OUTPUT:
Entrada: valor
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:30:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

print("Entrada:" valor)

if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")



-- ERROR:
File "XXXX", line 6
    print("Entrada:" valor)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:31:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

print("Entrada:", valor)

if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")



-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 10:31:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

print("Entrada:", valor)

if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")



-- EXECUTION TIME:
0.171737
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Garoupa
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:31:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

print("Entrada:", valor)

if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")



-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:31:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

print("Entrada:", valor)

if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")



-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:31:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

print("Entrada:", valor)

if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")



-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:33:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

print("Entrada:", valor)

if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif: (valor == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")



-- ERROR:
File "XXXX", line 18
    elif: (valor == 100):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:33:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

print("Entrada:", valor)

if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif: (valor == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")



-- ERROR:
File "XXXX", line 18
    elif: (valor == 100):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:33:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

print("Entrada:", valor)

if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")



-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 10:33:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

print("Entrada:", valor)

if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")



-- EXECUTION TIME:
0.138893
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:33:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

print("Entrada:", valor)

if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")



-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:33:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

print("Entrada:", valor)

if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")



-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:34:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

print("Entrada:", valor)

if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")



-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:34:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

print("Entrada:", valor)

if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")



-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:34:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

print("Entrada:", valor)

if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")



-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 10:35:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

print("Entrada:", valor)

if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")



-- EXECUTION TIME:
0.213189
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:35:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

print("Entrada:", valor)

if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")



-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:38:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

print("Entrada:", valor)

if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")



-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:38:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

print("Entrada:", valor)

if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")



-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:38:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

print("Entrada:", valor)

if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")



-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:38:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

print("Entrada:", valor)

if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")



-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:38:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

print("Entrada:", valor)

if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")



-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:38:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

print("Entrada:", valor)

if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")



-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:38:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

print("Entrada:", valor)

if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")



-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:38:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

print("Entrada:", valor)

if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")



-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:51:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

print("Entrada:", valor)

if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")



-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:51:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

print("Entrada:", valor)

if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")



-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:51:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

print("Entrada:", valor)

if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")



-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:51:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

print("Entrada:", valor)

if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")



-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:51:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

print("Entrada:", valor)

if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")



-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:51:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

print("Entrada:", valor)

if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")



-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:51:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

print("Entrada:", valor)

if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")



-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:51:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

print("Entrada:", valor)

if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")



-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:52:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

print("Entrada:", valor)

if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")



-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:54:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

print("Entrada:", valor)

if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")



-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:55:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

print("Entrada:", valor)

if (valor == 2):
	print("Animal: Tartaruga")
	elif (valor == 5):
		print("Animal: Garca")
	elif (valor == 10):
		print("Animal: Arara")
	elif (valor == 20):
		print("Animal: Mico-leao-dourado")
	elif (valor == 50):
		print("Animal: Onca-pintada")
	elif (valor == 100):
		print("Animal: Garoupa")
else:
	print("Animal: invalido")



-- ERROR:
File "XXXX", line 10
    elif (valor == 5):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:55:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

print("Entrada:", valor)

if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
		print("Animal: Garca")
	elif (valor == 10):
		print("Animal: Arara")
	elif (valor == 20):
		print("Animal: Mico-leao-dourado")
	elif (valor == 50):
		print("Animal: Onca-pintada")
	elif (valor == 100):
		print("Animal: Garoupa")
else:
	print("Animal: invalido")



-- ERROR:
File "XXXX", line 12
    elif (valor == 10):
                      ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:56:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

print("Entrada:", valor)

if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")



-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:05:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

print("Entrada:", valor)

if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")



-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:05:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

print("Entrada:", valor)

if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")



-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:20:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

print("Entrada:", valor)

if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")



-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:21:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

print("Entrada:", valor)

if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")



-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:21:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

print("Entrada:", valor)

if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")



-- EXECUTION TIME:
0.168908
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
